--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="./images/images/logo.png" alt="logo image" height="50" width="50">
+        <img src="images/images/logo.png" alt="logo image" height="50" width="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
